feat: Implement Google Sign-In with Supabase
- Add GoogleSignInManager with nonce support
- Update AuthService to handle Google auth and database constraints
- Fix UserDTO to handle optional clerk_user_id
- Update LoginView to support Google Sign-In flow

--- a/ios/SportsIQ/SportsIQ/Info.plist
+++ b/ios/SportsIQ/SportsIQ/Info.plist
@@ -79,7 +79,17 @@
 				<string>sportsiq</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.549607005674-3bltmdl7egeuporuca0hh4ish4qogfd8</string>
+			</array>
+		</dict>
 	</array>
+    <key>GIDClientID</key>
+    <string>549607005674-3bltmdl7egeuporuca0hh4ish4qogfd8.apps.googleusercontent.com</string>
 
 	<!-- App Transport Security -->
 	<key>NSAppTransportSecurity</key>
